<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>io.loicgreffier.quickstarts</groupId>
	<artifactId>spring-boot-kafka-quickstarts</artifactId>
	<version>1.0.0</version>
	<name>spring-boot-kafka-quickstarts</name>
	<description>Code samples around Spring Boot and Kafka</description>

	<repositories>
		<repository>
			<id>confluent</id>
			<url>https://packages.confluent.io/maven/</url>
		</repository>
	</repositories>

	<modules>
		<module>kafka-producer-quickstarts</module>
		<module>kafka-consumer-quickstarts</module>
		<module>kafka-streams-quickstarts</module>
    </modules>

	<properties>
		<avro.version>1.11.0</avro.version>
		<java.version>17</java.version>
		<jib-maven-plugin.version>3.2.1</jib-maven-plugin.version>
		<kafka.version>3.3.1</kafka.version>
		<kafka-avro-serializer.version>7.1.1</kafka-avro-serializer.version>
		<kafka-streams-avro-serde.version>7.1.1</kafka-streams-avro-serde.version>
		<lombok.version>1.18.24</lombok.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.avro</groupId>
					<artifactId>avro-maven-plugin</artifactId>
					<version>${avro.version}</version>
					<executions>
						<execution>
							<phase>generate-sources</phase>
							<goals>
								<goal>schema</goal>
							</goals>
							<configuration>
								<stringType>String</stringType>
								<enableDecimalLogicalType>true</enableDecimalLogicalType>
								<sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
								<outputDirectory>${project.basedir}/target/generated-sources</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>${jib-maven-plugin.version}</version>
				<configuration>
					<from>
						<image>eclipse-temurin:17.0.3_7-jre</image>
					</from>
					<to>
						<image>docker.io/loicgreffier/spring-boot-kafka-quickstarts:${project.artifactId}-${project.version}</image>
					</to>
					<container>
						<ports>
							<port>8080</port>
						</ports>
					</container>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
